--- a/HW_Mirkin.ipynb
+++ b/HW_Mirkin.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,25 +605,461 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Homework 3"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def categorize_number_of_deaths(num_of_deaths):\n",
+    "    if num_of_deaths < 10:\n",
+    "        return '9-'\n",
+    "    elif num_of_deaths < 100:\n",
+    "        return '10+'\n",
+    "    elif num_of_deaths < 200:\n",
+    "        return '100+'\n",
+    "    else:\n",
+    "        return '200+'\n",
+    "\n",
+    "def categorize_rating(rating):\n",
+    "    if rating < 5.0:\n",
+    "        return '5.0-'\n",
+    "    elif rating < 7.0:\n",
+    "        return '5.0+'\n",
+    "    elif rating < 8.0:\n",
+    "        return '7.0+'\n",
+    "    else:\n",
+    "        return '8.0+'\n",
+    "    \n",
+    "def categorize_year(year):\n",
+    "    if year < 1990:\n",
+    "        return '1989-'\n",
+    "    elif year < 2000:\n",
+    "        return '1990+'\n",
+    "    elif year < 2005:\n",
+    "        return '2000+'\n",
+    "    else:\n",
+    "        return '2005+'\n",
+    "\n",
+    "def make_quetelet(probabilites_df):\n",
+    "    res = probabilites_df.copy()\n",
+    "    res.drop(index='Total', columns='Total', inplace=True)\n",
+    "    for col in res:\n",
+    "        for row in res[col].index:\n",
+    "            res[col][row] = (probabilites_df[col][row] / probabilites_df['Total'][row] - probabilites_df[col]['Total']) / \\\n",
+    "                             probabilites_df[col]['Total']\n",
+    "    return res\n",
+    "\n",
+    "bodies = df['Body_Count'].apply(categorize_number_of_deaths)\n",
+    "imdb_rating = df['IMDB_Rating'].apply(categorize_rating)\n",
+    "year = df['Year'].apply(categorize_year)\n",
+    "\n",
+    "contingency_table_imdb_bodies = pd.crosstab(bodies, imdb_rating, margins=True, margins_name='Total', normalize='all')\n",
+    "contingency_table_year_bodies = pd.crosstab(bodies, year, margins=True, margins_name='Total', normalize='all')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>IMDB_Rating</th>\n",
+       "      <th>5.0+</th>\n",
+       "      <th>5.0-</th>\n",
+       "      <th>7.0+</th>\n",
+       "      <th>8.0+</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Body_Count</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10+</th>\n",
+       "      <td>31.743119</td>\n",
+       "      <td>2.935780</td>\n",
+       "      <td>18.165138</td>\n",
+       "      <td>8.623853</td>\n",
+       "      <td>61.467890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100+</th>\n",
+       "      <td>5.504587</td>\n",
+       "      <td>1.284404</td>\n",
+       "      <td>5.871560</td>\n",
+       "      <td>2.568807</td>\n",
+       "      <td>15.229358</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200+</th>\n",
+       "      <td>1.834862</td>\n",
+       "      <td>0.183486</td>\n",
+       "      <td>4.220183</td>\n",
+       "      <td>0.733945</td>\n",
+       "      <td>6.972477</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9-</th>\n",
+       "      <td>7.522936</td>\n",
+       "      <td>0.917431</td>\n",
+       "      <td>5.137615</td>\n",
+       "      <td>2.752294</td>\n",
+       "      <td>16.330275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Total</th>\n",
+       "      <td>46.605505</td>\n",
+       "      <td>5.321101</td>\n",
+       "      <td>33.394495</td>\n",
+       "      <td>14.678899</td>\n",
+       "      <td>100.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "IMDB_Rating       5.0+      5.0-       7.0+       8.0+       Total\n",
+       "Body_Count                                                        \n",
+       "10+          31.743119  2.935780  18.165138   8.623853   61.467890\n",
+       "100+          5.504587  1.284404   5.871560   2.568807   15.229358\n",
+       "200+          1.834862  0.183486   4.220183   0.733945    6.972477\n",
+       "9-            7.522936  0.917431   5.137615   2.752294   16.330275\n",
+       "Total        46.605505  5.321101  33.394495  14.678899  100.000000"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contingency_table_imdb_bodies * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Year</th>\n",
+       "      <th>1989-</th>\n",
+       "      <th>1990+</th>\n",
+       "      <th>2000+</th>\n",
+       "      <th>2005+</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Body_Count</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10+</th>\n",
+       "      <td>13.944954</td>\n",
+       "      <td>19.082569</td>\n",
+       "      <td>11.192661</td>\n",
+       "      <td>17.247706</td>\n",
+       "      <td>61.467890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100+</th>\n",
+       "      <td>6.605505</td>\n",
+       "      <td>2.201835</td>\n",
+       "      <td>3.119266</td>\n",
+       "      <td>3.302752</td>\n",
+       "      <td>15.229358</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200+</th>\n",
+       "      <td>1.284404</td>\n",
+       "      <td>1.100917</td>\n",
+       "      <td>1.834862</td>\n",
+       "      <td>2.752294</td>\n",
+       "      <td>6.972477</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9-</th>\n",
+       "      <td>3.302752</td>\n",
+       "      <td>3.119266</td>\n",
+       "      <td>5.321101</td>\n",
+       "      <td>4.587156</td>\n",
+       "      <td>16.330275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Total</th>\n",
+       "      <td>25.137615</td>\n",
+       "      <td>25.504587</td>\n",
+       "      <td>21.467890</td>\n",
+       "      <td>27.889908</td>\n",
+       "      <td>100.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Year            1989-      1990+      2000+      2005+       Total\n",
+       "Body_Count                                                        \n",
+       "10+         13.944954  19.082569  11.192661  17.247706   61.467890\n",
+       "100+         6.605505   2.201835   3.119266   3.302752   15.229358\n",
+       "200+         1.284404   1.100917   1.834862   2.752294    6.972477\n",
+       "9-           3.302752   3.119266   5.321101   4.587156   16.330275\n",
+       "Total       25.137615  25.504587  21.467890  27.889908  100.000000"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contingency_table_year_bodies * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>IMDB_Rating</th>\n",
+       "      <th>5.0+</th>\n",
+       "      <th>5.0-</th>\n",
+       "      <th>7.0+</th>\n",
+       "      <th>8.0+</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Body_Count</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10+</th>\n",
+       "      <td>0.108062</td>\n",
+       "      <td>-0.102419</td>\n",
+       "      <td>-0.115057</td>\n",
+       "      <td>-0.044216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100+</th>\n",
+       "      <td>-0.224457</td>\n",
+       "      <td>0.584961</td>\n",
+       "      <td>0.154508</td>\n",
+       "      <td>0.149096</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200+</th>\n",
+       "      <td>-0.435350</td>\n",
+       "      <td>-0.505445</td>\n",
+       "      <td>0.812464</td>\n",
+       "      <td>-0.282895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9-</th>\n",
+       "      <td>-0.011546</td>\n",
+       "      <td>0.055792</td>\n",
+       "      <td>-0.057908</td>\n",
+       "      <td>0.148174</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "IMDB_Rating      5.0+      5.0-      7.0+      8.0+\n",
+       "Body_Count                                         \n",
+       "10+          0.108062 -0.102419 -0.115057 -0.044216\n",
+       "100+        -0.224457  0.584961  0.154508  0.149096\n",
+       "200+        -0.435350 -0.505445  0.812464 -0.282895\n",
+       "9-          -0.011546  0.055792 -0.057908  0.148174"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "make_quetelet(contingency_table_imdb_bodies)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Year</th>\n",
+       "      <th>1989-</th>\n",
+       "      <th>1990+</th>\n",
+       "      <th>2000+</th>\n",
+       "      <th>2005+</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Body_Count</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10+</th>\n",
+       "      <td>-0.097505</td>\n",
+       "      <td>0.217223</td>\n",
+       "      <td>-0.151805</td>\n",
+       "      <td>0.006088</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100+</th>\n",
+       "      <td>0.725442</td>\n",
+       "      <td>-0.433128</td>\n",
+       "      <td>-0.045927</td>\n",
+       "      <td>-0.222416</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200+</th>\n",
+       "      <td>-0.267192</td>\n",
+       "      <td>-0.380916</td>\n",
+       "      <td>0.225821</td>\n",
+       "      <td>0.415339</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9-</th>\n",
+       "      <td>-0.195440</td>\n",
+       "      <td>-0.251071</td>\n",
+       "      <td>0.517814</td>\n",
+       "      <td>0.007170</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Year           1989-     1990+     2000+     2005+\n",
+       "Body_Count                                        \n",
+       "10+        -0.097505  0.217223 -0.151805  0.006088\n",
+       "100+        0.725442 -0.433128 -0.045927 -0.222416\n",
+       "200+       -0.267192 -0.380916  0.225821  0.415339\n",
+       "9-         -0.195440 -0.251071  0.517814  0.007170"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "make_quetelet(contingency_table_year_bodies)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -635,7 +1071,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
