--- a/hw4_pca.ipynb
+++ b/hw4_pca.ipynb
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -587,7 +587,7 @@
     "print(contrib*100, weights.round(3)*100)\n",
     "# On a 0-100 rank we obtain\n",
     "# The first PC explains 99.8% of data scatter\n",
-    "# And the most contributing factor is IMDB_Rating"
+    "# And the most contributing feature is IMDB_Rating"
    ]
   },
   {
