--- a/Text/HW 20.tex
+++ b/Text/HW 20.tex
@@ -579,7 +579,7 @@ Next we consider the year of the movies by cluster and ratings. This plot has th
 	\adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{output_15_1.png}
 \end{center}
  
-It can be seen that the cluster 1 contains mostly old movies, as was discovered before. Now we can see that it are mostly pre-1980 movies. Cluster 0 contains movies from about  the 90-s.
+It can be seen that the cluster 1 contains mostly old movies, as was discovered before. Now we can see that these are mostly pre-1980 movies. Cluster 0 contains movies from about  the 90-s.
 And it is interesting that the highest body count movies, captured by cluster 3, are mostly recent - post-2010.
 
 
@@ -625,8 +625,55 @@ The parameters of the distributions are listed in the table. The distributions s
 		75\%  & 87.250000  & 147.000000 \\ \hline
 		max   & 258.000000 & 471.000000 \\ \hline
 	\end{tabular}
-
+    \begin{center}
+	\adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{output_21_2.png}
+\end{center}
 We apply bootstrap with 5000 samples to compare the distribution between the clusters. We obtain that  the distributions of Body\_Count really differ between these clusters. They not only have different means, as evident by confidence intervals, but also have different bell shapes. We conclude that the distribution of the feature is approximately Gaussian.
+
+The code for bootstrap implication and the confidence intervals is below. We use pivotal and non-pivotal bootstrap for the confidence intervals. It can be seen from the graphs, that they are almost coincide, so the destributian of the feature is close to Gaussian.
+
+\footnotesize    \begin{Verbatim}[commandchars=\\\{\}]
+{\color{incolor}In [{\color{incolor}91}]:} \PY{k}{def} \PY{n+nf}{bootstrap\PYZus{}sample}\PY{p}{(}\PY{n}{vec}\PY{p}{,} \PY{n}{size}\PY{p}{)}\PY{p}{:}
+\PY{k}{return} \PY{n}{np}\PY{o}{.}\PY{n}{random}\PY{o}{.}\PY{n}{choice}\PY{p}{(}\PY{n}{vec}\PY{p}{,} \PY{n}{size}\PY{o}{=}\PY{p}{(}\PY{n}{vec}\PY{o}{.}\PY{n}{shape}\PY{p}{[}\PY{l+m+mi}{0}\PY{p}{]}\PY{p}{,} \PY{n}{size}\PY{p}{)}\PY{p}{,} \PY{n}{replace}\PY{o}{=}\PY{k+kc}{True}\PY{p}{)}
+
+\PY{k}{def} \PY{n+nf}{bootstrap\PYZus{}means}\PY{p}{(}\PY{n}{srs}\PY{p}{,} \PY{n}{\ \ \ \ sample\PYZus{}amount}\PY{o}{=}\PY{l+m+mi}{5000}\PY{p}{)}\PY{p}{:}
+\PY{n}{\ \ \ \ samples\PYZus{}ix} \PY{o}{=} \PY{n}{bootstrap\PYZus{}sample}\PY{p}{(}\PY{n}{srs}\PY{o}{.}\PY{n}{index}\PY{p}{,} \PY{n}{size}\PY{o}{=}\PY{n}{sample\PYZus{}amount}\PY{p}{)}\PY{o}{.}\PY{n}{T}
+\PY{n}{\ \ \ \ means} \PY{o}{=} \PY{n}{np}\PY{o}{.}\PY{n}{array}\PY{p}{(}\PY{p}{[}\PY{n}{srs}\PY{o}{.}\PY{n}{loc}\PY{p}{[}\PY{n}{sample}\PY{p}{]}\PY{o}{.}\PY{n}{mean}\PY{p}{(}\PY{p}{)} \PY{k}{for} \PY{n}{sample} \PY{o+ow}{in} \PY{n}{samples\PYZus{}ix}\PY{p}{]}\PY{p}{)}
+\PY{k}{\ \ \ \ return} \PY{n}{means}
+\end{Verbatim}
+
+    \begin{Verbatim}[commandchars=\\\{\}]
+\PY{n}{b\PYZus{}means\PYZus{}cluster\PYZus{}0} \PY{o}{=} \PY{n}{bootstrap\PYZus{}means}\PY{p}{(}\PY{n}{cluster\PYZus{}0}\PY{o}{.}\PY{n}{Body\PYZus{}Count}\PY{p}{)}
+\PY{n}{b\PYZus{}means\PYZus{}cluster\PYZus{}1} \PY{o}{=} \PY{n}{bootstrap\PYZus{}means}\PY{p}{(}\PY{n}{cluster\PYZus{}1}\PY{o}{.}\PY{n}{Body\PYZus{}Count}\PY{p}{)}
+
+\PY{k}{def} \PY{n+nf}{confidence\PYZus{}interval\PYZus{}pivotal}\PY{p}{(}\PY{n}{vec}\PY{p}{)}\PY{p}{:}
+\PY{n}{    mean} \PY{o}{=} \PY{n}{vec}\PY{o}{.}\PY{n}{mean}\PY{p}{(}\PY{p}{)}
+\PY{n}{    std} \PY{o}{=} \PY{n}{vec}\PY{o}{.}\PY{n}{std}\PY{p}{(}\PY{p}{)}
+\PY{k}{    return} \PY{p}{[}\PY{n}{mean}\PY{o}{\PYZhy{}}\PY{l+m+mf}{1.96}\PY{o}{*}\PY{n}{std}\PY{p}{,} \PY{n}{mean}\PY{o}{+}\PY{l+m+mf}{1.96}\PY{o}{*}\PY{n}{std}\PY{p}{]}
+
+\PY{k}{def} \PY{n+nf}{confidence\PYZus{}interval\PYZus{}non\PYZus{}pivotal}\PY{p}{(}\PY{n}{vec}\PY{p}{,} \PY{n}{alpha}\PY{p}{)}\PY{p}{:}
+\PY{n}{    left} \PY{o}{=} \PY{n}{np}\PY{o}{.}\PY{n}{percentile}\PY{p}{(}\PY{n}{vec}\PY{p}{,} \PY{p}{(}\PY{l+m+mi}{100}\PY{o}{\PYZhy{}}\PY{n}{alpha}\PY{p}{)}\PY{o}{/}\PY{l+m+mi}{2}\PY{p}{)}
+\PY{n}{    right} \PY{o}{=} \PY{n}{np}\PY{o}{.}\PY{n}{percentile}\PY{p}{(}\PY{n}{vec}\PY{p}{,} \PY{n}{alpha}\PY{o}{+}\PY{p}{(}\PY{l+m+mi}{100}\PY{o}{\PYZhy{}}\PY{n}{alpha}\PY{p}{)}\PY{o}{/}\PY{l+m+mi}{2}\PY{p}{)}
+\PY{k}{    return} \PY{p}{[}\PY{n}{left}\PY{p}{,} \PY{n}{right}\PY{p}{]}
+
+\PY{k}{def} \PY{n+nf}{distplot\PYZus{}with\PYZus{}conf\PYZus{}intervals}\PY{p}{(}\PY{n}{vec}\PY{p}{,} \PY{n}{ax}\PY{o}{=}\PY{k+kc}{None}\PY{p}{)}\PY{p}{:}
+\PY{k}{    if} \PY{o+ow}{not} \PY{n}{ax}\PY{p}{:}
+\PY{n}{        ax} \PY{o}{=} \PY{n}{plt}\PY{o}{.}\PY{n}{gca}\PY{p}{(}\PY{p}{)}
+\PY{k}{    for} \PY{n}{x} \PY{o+ow}{in} \PY{n}{confidence\PYZus{}interval\PYZus{}pivotal}\PY{p}{(}\PY{n}{vec}\PY{p}{)}\PY{p}{:}
+\PY{n}{        line} \PY{o}{=} \PY{n}{ax}\PY{o}{.}\PY{n}{axvline}\PY{p}{(}\PY{n}{x}\PY{o}{=}\PY{n}{x}\PY{p}{,} \PY{n}{color}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{g}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}
+\PY{n}{    line}\PY{o}{.}\PY{n}{set\PYZus{}label}\PY{p}{(}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{pivotal}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}
+\PY{k}{    for} \PY{n}{x} \PY{o+ow}{in} \PY{n}{confidence\PYZus{}interval\PYZus{}non\PYZus{}pivotal}\PY{p}{(}\PY{n}{vec}\PY{p}{,} \PY{l+m+mi}{95}\PY{p}{)}\PY{p}{:}
+\PY{n}{        line} \PY{o}{=} \PY{n}{ax}\PY{o}{.}\PY{n}{axvline}\PY{p}{(}\PY{n}{x}\PY{o}{=}\PY{n}{x}\PY{p}{,} \PY{n}{color}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{r}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}
+\PY{n}{    line}\PY{o}{.}\PY{n}{set\PYZus{}label}\PY{p}{(}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{non\PYZhy{}pivotal}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}
+\PY{n}{    ax}\PY{o}{.}\PY{n}{legend}\PY{p}{(}\PY{n}{loc}\PY{o}{=}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{best}\PY{l+s+s1}{\PYZsq{}}\PY{p}{)}
+\PY{k}{    return} \PY{n}{sns}\PY{o}{.}\PY{n}{distplot}\PY{p}{(}\PY{n}{vec}\PY{p}{,} \PY{n}{ax}\PY{o}{=}\PY{n}{ax}\PY{p}{,} \PY{n}{norm\PYZus{}hist}\PY{o}{=}\PY{k+kc}{False}\PY{p}{)}
+
+
+\end{Verbatim}
+
+
+\normalsize
+
 
 Next we build the 95\% confidence intervals for the grand mean of the feature by using bootstrap. Also we use bootstrap to compare cluster 0 to the grand mean.  We obtain:
 
