--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,6 +49,14 @@
     "            res[col][row] /= probabilites_df['Total'][row]\n",
     "    return res\n",
     "\n",
+    "def normalize(contingency_df):\n",
+    "    res = contingency_df.copy()\n",
+    "    res = res.astype('float')\n",
+    "    for col in res:\n",
+    "        for row in res[col].index:\n",
+    "            res[col][row] /= contingency_df['Total']['Total']\n",
+    "    return res\n",
+    "\n",
     "def make_quetelet(probabilites_df):\n",
     "    res = probabilites_df.copy()\n",
     "    res.drop(index='Total', columns='Total', inplace=True)\n",
@@ -60,17 +68,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 36,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "bodies = df['Body_Count'].apply(categorize_func([10, 100, 200]))\n",
-    "imdb_rating = df['IMDB_Rating'].apply(categorize_func([5.0, 7.0, 8.0]))\n",
-    "year = df['Year'].apply(categorize_func([1990, 2000, 2005]))\n",
-    "\n",
-    "contingency_table_imdb_bodies = pd.crosstab(bodies, imdb_rating, margins=True, margins_name='Total', normalize='all')\n",
-    "contingency_table_year_bodies = pd.crosstab(bodies, year, margins=True, margins_name='Total', normalize='all')"
+    "## Making nominal features\n",
+    "Looking at histograms of features *IMDB_Rating*, *Year* and *Body_Count*. Make them nominal features by splitting them."
    ]
   },
   {
@@ -108,7 +110,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -170,8 +174,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Making contingency tables"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bodies = df['Body_Count'].apply(categorize_func([10, 100, 200]))\n",
+    "imdb_rating = df['IMDB_Rating'].apply(categorize_func([5.0, 7.0, 8.0]))\n",
+    "year = df['Year'].apply(categorize_func([1990, 2000, 2005]))\n",
+    "\n",
+    "contingency_table_imdb_bodies = pd.crosstab(bodies, imdb_rating, margins=True, margins_name='Total')\n",
+    "contingency_table_year_bodies = pd.crosstab(bodies, year, margins=True, margins_name='Total')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looking at contingency tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -213,70 +245,70 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>&lt;10</th>\n",
-       "      <td>0.917431</td>\n",
-       "      <td>7.522936</td>\n",
-       "      <td>5.137615</td>\n",
-       "      <td>2.752294</td>\n",
-       "      <td>16.330275</td>\n",
+       "      <td>5</td>\n",
+       "      <td>41</td>\n",
+       "      <td>28</td>\n",
+       "      <td>15</td>\n",
+       "      <td>89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>≥10</th>\n",
-       "      <td>2.935780</td>\n",
-       "      <td>31.743119</td>\n",
-       "      <td>18.165138</td>\n",
-       "      <td>8.623853</td>\n",
-       "      <td>61.467890</td>\n",
+       "      <td>16</td>\n",
+       "      <td>173</td>\n",
+       "      <td>99</td>\n",
+       "      <td>47</td>\n",
+       "      <td>335</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>≥100</th>\n",
-       "      <td>1.284404</td>\n",
-       "      <td>5.504587</td>\n",
-       "      <td>5.871560</td>\n",
-       "      <td>2.568807</td>\n",
-       "      <td>15.229358</td>\n",
+       "      <td>7</td>\n",
+       "      <td>30</td>\n",
+       "      <td>32</td>\n",
+       "      <td>14</td>\n",
+       "      <td>83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>≥200</th>\n",
-       "      <td>0.183486</td>\n",
-       "      <td>1.834862</td>\n",
-       "      <td>4.220183</td>\n",
-       "      <td>0.733945</td>\n",
-       "      <td>6.972477</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>23</td>\n",
+       "      <td>4</td>\n",
+       "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total</th>\n",
-       "      <td>5.321101</td>\n",
-       "      <td>46.605505</td>\n",
-       "      <td>33.394495</td>\n",
-       "      <td>14.678899</td>\n",
-       "      <td>100.000000</td>\n",
+       "      <td>29</td>\n",
+       "      <td>254</td>\n",
+       "      <td>182</td>\n",
+       "      <td>80</td>\n",
+       "      <td>545</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "IMDB_Rating      <5.0       ≥5.0       ≥7.0       ≥8.0       Total\n",
-       "Body_Count                                                        \n",
-       "<10          0.917431   7.522936   5.137615   2.752294   16.330275\n",
-       "≥10          2.935780  31.743119  18.165138   8.623853   61.467890\n",
-       "≥100         1.284404   5.504587   5.871560   2.568807   15.229358\n",
-       "≥200         0.183486   1.834862   4.220183   0.733945    6.972477\n",
-       "Total        5.321101  46.605505  33.394495  14.678899  100.000000"
+       "IMDB_Rating  <5.0  ≥5.0  ≥7.0  ≥8.0  Total\n",
+       "Body_Count                                \n",
+       "<10             5    41    28    15     89\n",
+       "≥10            16   173    99    47    335\n",
+       "≥100            7    30    32    14     83\n",
+       "≥200            1    10    23     4     38\n",
+       "Total          29   254   182    80    545"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "contingency_table_imdb_bodies * 100"
+    "contingency_table_imdb_bodies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -318,70 +350,78 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>&lt;10</th>\n",
-       "      <td>3.302752</td>\n",
-       "      <td>3.119266</td>\n",
-       "      <td>5.321101</td>\n",
-       "      <td>4.587156</td>\n",
-       "      <td>16.330275</td>\n",
+       "      <td>18</td>\n",
+       "      <td>17</td>\n",
+       "      <td>29</td>\n",
+       "      <td>25</td>\n",
+       "      <td>89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>≥10</th>\n",
-       "      <td>13.944954</td>\n",
-       "      <td>19.082569</td>\n",
-       "      <td>11.192661</td>\n",
-       "      <td>17.247706</td>\n",
-       "      <td>61.467890</td>\n",
+       "      <td>76</td>\n",
+       "      <td>104</td>\n",
+       "      <td>61</td>\n",
+       "      <td>94</td>\n",
+       "      <td>335</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>≥100</th>\n",
-       "      <td>6.605505</td>\n",
-       "      <td>2.201835</td>\n",
-       "      <td>3.119266</td>\n",
-       "      <td>3.302752</td>\n",
-       "      <td>15.229358</td>\n",
+       "      <td>36</td>\n",
+       "      <td>12</td>\n",
+       "      <td>17</td>\n",
+       "      <td>18</td>\n",
+       "      <td>83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>≥200</th>\n",
-       "      <td>1.284404</td>\n",
-       "      <td>1.100917</td>\n",
-       "      <td>1.834862</td>\n",
-       "      <td>2.752294</td>\n",
-       "      <td>6.972477</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>10</td>\n",
+       "      <td>15</td>\n",
+       "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total</th>\n",
-       "      <td>25.137615</td>\n",
-       "      <td>25.504587</td>\n",
-       "      <td>21.467890</td>\n",
-       "      <td>27.889908</td>\n",
-       "      <td>100.000000</td>\n",
+       "      <td>137</td>\n",
+       "      <td>139</td>\n",
+       "      <td>117</td>\n",
+       "      <td>152</td>\n",
+       "      <td>545</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Year            <1990      ≥1990      ≥2000      ≥2005       Total\n",
-       "Body_Count                                                        \n",
-       "<10          3.302752   3.119266   5.321101   4.587156   16.330275\n",
-       "≥10         13.944954  19.082569  11.192661  17.247706   61.467890\n",
-       "≥100         6.605505   2.201835   3.119266   3.302752   15.229358\n",
-       "≥200         1.284404   1.100917   1.834862   2.752294    6.972477\n",
-       "Total       25.137615  25.504587  21.467890  27.889908  100.000000"
+       "Year        <1990  ≥1990  ≥2000  ≥2005  Total\n",
+       "Body_Count                                   \n",
+       "<10            18     17     29     25     89\n",
+       "≥10            76    104     61     94    335\n",
+       "≥100           36     12     17     18     83\n",
+       "≥200            7      6     10     15     38\n",
+       "Total         137    139    117    152    545"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "contingency_table_year_bodies * 100"
+    "contingency_table_year_bodies"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Relative probabilities\n",
+    "Finding relative probabilitiy tables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -460,13 +500,13 @@
        "≥200         2.631579  26.315789  60.526316  10.526316"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "make_relative(contingency_table_imdb_bodies) * 100"
+    "make_relative(normalize(contingency_table_imdb_bodies)) * 100"
    ]
   },
   {
@@ -478,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -557,13 +597,13 @@
        "≥200        18.421053  15.789474  26.315789  39.473684"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "make_relative(contingency_table_year_bodies) * 100"
+    "make_relative(normalize(contingency_table_year_bodies)) * 100"
    ]
   },
   {
@@ -574,8 +614,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Quetelet index tables"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -654,13 +701,13 @@
        "≥200        -50.544465 -43.535019  81.246385 -28.289474"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "make_quetelet(contingency_table_imdb_bodies) * 100"
+    "make_quetelet(normalize(contingency_table_imdb_bodies)) * 100"
    ]
   },
   {
@@ -673,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -752,13 +799,13 @@
        "≥200       -26.719170 -38.091632  22.582096  41.533934"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "make_quetelet(contingency_table_year_bodies) * 100"
+    "make_quetelet(normalize(contingency_table_year_bodies)) * 100"
    ]
   },
   {
